# SparseDemo

./: .gitignore  CMakeLists.txt  assembly.f90  demo.py  fixed2.txt  fixed3.txt  notes.txt  petsc-example.f90  petsc-matrix-example.f90  petsc-vector-example.f90  test-fortran-context.py  test-petsc.py  test-python-context.py
SparseBLAS/: CMakeLists.txt  GetAndCompile.sh
blas_interface/: blas_sparse.f90  blas_sparse_namedconstants.f90
cmake/: CorrectWindowsPaths.cmake  FindF2PY.cmake  FindPETSc.cmake  FindPackageMultipass.cmake  ResolveCompilerPaths.cmake  readme
sparse_blas/: GetAndCompile.sh
